Companies and Address good.  There are no addresses without parents, we dont just collect them for later use.  The user can see lists of addresses but there is no way directly to create one except from its parent.

--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -6,6 +6,9 @@
         - @address.errors.full_messages.each do |message|
           %li= message
 
+  %h3 
+    = @parent
+
   .field
     = f.label :street_address
     = f.text_field :street_address
@@ -27,7 +30,7 @@
   .field
     = f.label :latitude
     = f.text_field :latitude
-  .actions
-    = f.submit 'Save this'
+  .action
+    = f.submit
   
 
