--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -3,8 +3,8 @@
 
 %p
   = @company.display_address
-  = link_to 'edit', edit_address_path(@company)
-
+  = link_to 'edit address', edit_address_path
+  
 %hr
 
 %p
