Added url to search in Company index.

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -11,6 +11,9 @@
           = f.text_field :name_cont, class: 'form-control'
           = f.label :line_of_business
           = f.text_field :line_of_business_cont, class: 'form-control'
+          = f.label :url
+          = f.text_field :url_cont, class: 'form-control'
+
           = f.submit class: 'btn btn-primary'
  
           .btn
