--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -23,12 +23,12 @@
       %hr
 
       %table
+
         %thead
           %tr
-
             %th Name
-            %th Line of Business
-            %th City
+            %th{width: '24px'} Line of Business
+            %th{width: '60px'} City
             %th Web Site
             %th Credit terms
             %th Po required
