--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -3,6 +3,7 @@
 = @company.display_address
 %hr/
 = render 'form', company: @company
+&nbsp;
 = link_to 'Show', @company
 |
 = link_to 'Back', companies_path
