Reworked Company attributes.  Made integer values into strings for credit_terms and bookkeeping_number.  Not doing any arithmentic on these and this way they are subject to search.  Removed licensee, this needs to be established in a static configuration.  May already be there?  Added credit_terms to search keys.  Put defaults into company.rb and used convetion that default values include '(Please edit) to encourage completing them.

--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -25,7 +25,7 @@
   .form-group
     = form.label :credit_terms, "Credit Terms", class: "col-md-4 control-label"
     .col-md-8
-      = form.select(:credit_terms, { none: 1, week: 2, fortnight: 3, month: 4, 'same day': 5, 'on delivery': 6 })
+      = form.select(:credit_terms, ['None', 'Week', 'Fortnight', 'Month', 'Same Day', 'On Delivery'])
   .form-group
     = form.label :Po_required, "PO Required", class: "col-md-4 control-label"
     .col-md-8
