--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -14,14 +14,13 @@
           = f.text_field :line_of_business_cont, class: 'form-control'
           = f.label :url
           = f.text_field :url_cont, class: 'form-control'
-          = f.label :bookkeeping_number
-          = f.text_field :bookkeeping_number, class: 'form-control'
+          = f.label :credit_terms
+          = f.text_field :credit_terms_cont, class: 'form-control'
           = f.submit class: 'btn btn-primary'
-
           .btn
-            = link_to "Clear", request_path, class: "btn btn-secondary"
-          //= paginate @addresses            
-          %h4= paginate @companies
+            = link_to "Clear", request_path, class: "btn btn-secondary"      
+          %h5
+            = paginate @companies
     .col-6
       %h3 Companies
       = @companies.count 
@@ -40,7 +39,7 @@
             %th Po required
             %th Active
             %th Bookkeeping number
-            %th Licensee
+            
             
         %tbody
           - @companies.each do |company|
@@ -51,11 +50,13 @@
               %td= company.display_address
               %td
                 = link_to truncate(company.url, :length => 120), "http://#{company.url}"              
-              %td= company.display_credit_terms( company.credit_terms )
+              -#%td= company.display_credit_terms( company.credit_terms )
+              %td= company.credit_terms
+              
               %td= company.PO_required == true ? 'Yes' : 'No'
               %td= company.active == true ? 'Active' : 'Inactive'
               %td= company.bookkeeping_number
-              %td= company.licensee
+            
               %td= link_to 'Show', company
               %td= link_to 'Edit', edit_company_path(company)
               %td= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' }
