--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -19,36 +19,45 @@
           = f.submit class: 'btn btn-primary'
           .btn
             = link_to "Clear", request_path, class: "btn btn-secondary"      
+          %hr
+
           %h5
             = paginate @companies
+          
+
     .col-6
       %h3 Companies
       = @companies.count 
       listed
       %hr
-
+    
       %table
 
         %thead
           %tr
-            %th Name
-            %th{width: '24px'} Line of Business
-            %th{width: '60px'} City
+            %th{align: 'left', width: '32'}Name
+            %th{align: 'left', width: "64"}Line of Business
+            %th{align: 'left', width: '32'}City
             %th Web Site
             %th Credit terms
             %th Po required
             %th Active
-            %th Bookkeeping number
-            
-            
+            %th Bookkeeping Number      
         %tbody
           - @companies.each do |company|
             %tr
-            
-              %td= company.name
-              %td= company.line_of_business
-              %td= company.display_address
-              %td
+          
+              %td{align: 'left', width: '32'}= company.name
+
+              %td{align: 'left', width: "64"}= company.line_of_business
+               
+              - status, value = company.display_city 
+              -if status
+                %td= link_to "Please edit", edit_address_path(value)
+              -else
+                %td{align: 'left', width: '32'}= value
+              
+              %td{align: 'left', width: '32'}
                 = link_to truncate(company.url, :length => 120), "http://#{company.url}"              
               -#%td= company.display_credit_terms( company.credit_terms )
               %td= company.credit_terms
@@ -59,8 +68,7 @@
             
               %td= link_to 'Show', company
               %td= link_to 'Edit', edit_company_path(company)
-              %td= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' }
-
+              %td= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } 
       %br
 
       = link_to new_company_path, class: 'btn btn-secondary' do
