--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -4,9 +4,10 @@
 %p
   = @company.display_address
   = link_to 'edit address', edit_address_path
-  
+  = link_to 'people', people_path  
 %hr
-
+  = @company.identifiers.count
+  = link_to 'Contact info', company_identifiers_path
 %p
   %strong Credit terms:
   = @company.credit_terms
