Identifiers beginning to work.  Challenge now is how to create a new record.  It apprears will have to reside in parent controller, Company in this case, at least to this point. Or put a get_parent method in identifier.rb?  That may be better.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -4,10 +4,17 @@
 %p
   = @company.display_address
   = link_to 'edit address', edit_address_path
-  = link_to 'people', people_path  
+  = link_to 'people', people_path
+
+  %p
+
+  = render "identifiers/contacts_for"
+
+  = link_to "... more", parent_index_path(@company)
+  = link_to "edit contact", edit_identifier_path(@company)
+  
 %hr
-  = @company.identifiers.count
-  = link_to 'Contact info', company_identifiers_path
+  
 %p
   %strong Credit terms:
   = @company.credit_terms
