WIP on Identifier.  These are polymorphs that may occur any number of times for a given parent, e.g. Companies.  As usual, the challenge is to get the path to make sense, partiuclarly for New paths.  So far, easy trip out, longer trip back. As for addresses, CRUD operations are iniiated and motivated mostly by the parent.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -1,3 +1,4 @@
+
 %h1
   = @company.name
 
@@ -15,33 +16,32 @@
   
 %hr
   
-%p
-  %strong Credit terms:
+.field
+  %strong Credit terms: 
   = @company.credit_terms
 
-
-%p
+.field
   %strong PO required:
   = @company.PO_required
 
 
-%p
+.field
   %strong Active:
   = @company.active
 
-%p
+.field
   %strong>Bookkeeping number:
   = @company.bookkeeping_number
 
-%p
+.field
   %strong Line of business:
   = @company.line_of_business
 
-%p
+.field
   %strong Url:
   = @company.url
 
-%p
+.field
   %strong Licensee:
   = @company.licensee
 
