--- a/app/views/identifiers/_contacts_for.html.haml
+++ b/app/views/identifiers/_contacts_for.html.haml
@@ -8,7 +8,6 @@
   
   - @identifiers.each do |i|
     %p
-    = i.name
-    = i.value
+    = i.rank.ordinalize + '--' + i.name + ': ' + i.value
 
   
