--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -27,7 +27,6 @@
         %td= link_to 'Edit', edit_identifier_path(f)
         %td= link_to 'Destroy', f, method: :delete, data: { confirm: 'Are you sure?' }
 
-
 %br
 
-= link_to 'New Identifier', new_identifiable_path
+= link_to 'New (not edit) Identifier', new_company_identifier_path(1)
