Minor changes to Company and Identifier.  Moved details to #show from #index in Company.  Identifier/#delete redirects to companies_path although show_company_path might be better and more general as parent may not be a company.

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -39,10 +39,10 @@
             %th{align: 'left', width: "64"}Line of Business
             %th{align: 'left', width: '32'}City
             %th Web Site
-            %th Credit terms
-            %th Po required
-            %th Active
-            %th Bookkeeping Number      
+            -#%th Credit terms
+            -#%th Po required
+            -#th Active
+            -#%th Bookkeeping Number      
         %tbody
           - @companies.each do |company|
             %tr
@@ -60,11 +60,11 @@
               %td{align: 'left', width: '32'}
                 = link_to truncate(company.url, :length => 120), "http://#{company.url}"              
               -#%td= company.display_credit_terms( company.credit_terms )
-              %td= company.credit_terms
+              -#%td= company.credit_terms
               
-              %td= company.PO_required == true ? 'Yes' : 'No'
-              %td= company.active == true ? 'Active' : 'Inactive'
-              %td= company.bookkeeping_number
+              -#%td= company.PO_required == true ? 'Yes' : 'No'
+              -#%td= company.active == true ? 'Active' : 'Inactive'
+              -#%td= company.bookkeeping_number
             
               %td= link_to 'Show', company
               %td= link_to 'Edit', edit_company_path(company)
