--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,6 +1,11 @@
 %p#notice= notice
 = render '/layouts/people_header'
 %h1 People
+
+%p 
+  = @people.count 
+  listed
+
 %table
   %thead
     %tr
@@ -21,7 +26,7 @@
         %td= person.company_name
         %td= person.title
         %td= person.available
-        %td= person.available_on
+        %td= person.available_on.to_s
         %td= person.OK_to_contact
         %td= person.active
         %td= link_to 'Show', person
