--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -5,8 +5,8 @@
 
 %h1 Listing addresses
 
-//= paginate @addresses
-= paginate @addresses, :left => 1, :right => 3
+= paginate @addresses
+//= paginate @addresses, :left => 1, :right => 3
 
 %table
   %thead
@@ -38,7 +38,7 @@
         %td= addr.latitude
         %td= link_to 'Show', addr
         %td= link_to 'Edit', edit_address_path(addr)
-        %td= link_to 'Destroy', addr, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Destroy', addr, method: :delete, data: { confirm: "Are you sure you want to delete #{addr.display_parent_name} #{addr.addressable_type} address?" }
       %end
     %end
 
