--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -25,7 +25,7 @@
         %td= f.value
         %td= link_to 'Show', f
         %td= link_to 'Edit', edit_identifier_path(f)
-        %td= link_to 'Destroy', f, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Destroy', f, method: :delete, data: { confirm: "Are you sure you want to delete #{f.name}?" }
 
 %br
 
