Fixed will-paginate in Companies index; added align: top to Company columns based on LoB field; factored index.html.haml to use partial 'search_panel'. ; q

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -5,24 +5,7 @@
 
     .col-2
 
-      %h3 Search
-      = search_form_for @q do |f|
-        .field
-          = f.label :name
-          = f.text_field :name_cont, class: 'form-control'
-          = f.label :line_of_business
-          = f.text_field :line_of_business_cont, class: 'form-control'
-          = f.label :url
-          = f.text_field :url_cont, class: 'form-control'
-          = f.label :credit_terms
-          = f.text_field :credit_terms_cont, class: 'form-control'
-          = f.submit class: 'btn btn-primary'
-          .btn
-            = link_to "Clear", request_path, class: "btn btn-secondary"      
-          %hr
-
-          %h5
-            = paginate @companies
+      = render "search_panel", locals: {q: @q}
           
 
     .col-6
@@ -31,18 +14,16 @@
       listed
       %hr
     
-      %table
+      %table.table.table-striped.table-responsive
+
 
         %thead
           %tr
-            %th{align: 'left', width: '32'}Name
-            %th{align: 'left', width: "64"}Line of Business
+            %th{align: 'left'}Name
+            %th{align: 'left', valign: 'top'} Line of Business
             %th{align: 'left', width: '32'}City
             %th Web Site
-            -#%th Credit terms
-            -#%th Po required
-            -#th Active
-            -#%th Bookkeeping Number      
+
         %tbody
           - @companies.each do |company|
             %tr
