Oops, table-responsive is not nice, I'm missing someting so removed it. Zebra strips in company index not gorgeous but works well.

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -14,7 +14,7 @@
       listed
       %hr
     
-      %table.table.table-striped.table-responsive
+      %table.table.table-striped
 
 
         %thead
