--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -12,29 +12,40 @@
 
 %center
 
-  = link_to 'Companies', companies_path
+  = link_to 'Addresses', addresses_path
+  &nbsp;
+  = link_to 'Carriers', companies_path
+  &nbsp;
+  = link_to 'Distribution Centers', companies_path  
+  &nbsp;
+  = link_to 'Contacts', identifiers_path
   &nbsp;
   = link_to 'People', people_path
   &nbsp;
-  = link_to 'Projects', projects_path
+  = link_to 'Agreement Conditions', conditions_path  
   &nbsp;
-  = link_to 'Conditions', conditions_path
+  = link_to 'Tip Sites', tips_path
   &nbsp;
-  = link_to 'Dockets', dockets_path
-  &nbsp;
-  = link_to 'Engagements', engagements_path
+  = link_to 'Materials', materials_path
+
+  %p
+  Under Development
+  %p
+  = link_to 'Call Management', identifiers_path
   &nbsp;
   = link_to 'Equipment', equipments_path
+  %p
+  Available as Admin Serices Only (Deprecated)
+  %p
+  = link_to 'Engagements', engagements_path
   &nbsp;
-  = link_to 'Addresses', addresses_path
-  &nbsp;
-  = link_to 'Identifiers', identifiers_path
+  = link_to 'Invoices', dockets_path
   &nbsp;
   = link_to 'Jobs', jobs_path
   &nbsp;
-  = link_to 'Materials', materials_path
-  &nbsp;
   = link_to 'Permits', permits_path
+  &nbsp;
+  = link_to 'Projects', projects_path
   &nbsp;
   = link_to 'Quotes', quotes_path
   &nbsp;
@@ -45,8 +56,7 @@
   = link_to 'Schedules', schedules_path
   &nbsp;
   = link_to 'Solutions', solutions_path
-  &nbsp;
-  = link_to 'Tips', tips_path
+  
 
 %center
 
