--- a/app/views/permits/_form.html.haml
+++ b/app/views/permits/_form.html.haml
@@ -1,14 +1,11 @@
-= form_for @permit do |f|
+= form_for @permits do |f|
   - if @permit.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@permit.errors.count, "error")} prohibited this permit from being saved:"
+      %h2 = "#{pluralize(@permit.errors.count, "error")} prohibited this permit from being saved:"
       %ul
         - @permit.errors.full_messages.each do |message|
-          %li= message
+        %li= message
 
-  .field
-    = f.label :permitable
-    = f.text_field :permitable
   .field
     = f.label :name
     = f.text_field :name
